#cmake最低版本需求，不加入此行会受到警告信息
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
#项目名称
PROJECT(gobang)
#set(CMAKE_DEBUG_POSTFIX _d)
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")
add_definitions(-DUNICODE -D_UNICODE)

INCLUDE_DIRECTORIES("./src")
LINK_DIRECTORIES("./lib")
LINK_LIBRARIES(duilib_d)
#把当前目录（.）下所有源代码和头文件加入变量SRC_LIST
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
#生成应用程序 hello
ADD_EXECUTABLE(main ${DIR_SRCS})